--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 
 android {
   compileSdkVersion 25
@@ -18,6 +19,10 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
   }
+}
+
+kapt {
+  generateStubs = true
 }
 
 dependencies {
@@ -40,7 +45,11 @@ dependencies {
   // Gson dependency
   compile 'com.google.code.gson:gson:2.8.0'
   compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
+  compile 'com.google.dagger:dagger:2.10'
+  kapt 'com.google.dagger:dagger-compiler:2.10'
 }
+
 repositories {
   mavenCentral()
 }
